--- a/nodes/uglifyjs.html
+++ b/nodes/uglifyjs.html
@@ -59,6 +59,10 @@
         <input type="text" id="node-input-name" placeholder="Name"/>
     </div>
 
+    <div class="form-row">
+      All possible configuration options can be viewed at the <a target="_blank" style="color: blue;" href="https://www.npmjs.com/package/uglify-js#minify-options">uglify-js NPMjs page<i class="fa fa-external-link"></i></a>.
+    </div>
+
   <div class="form-row">
     <label for="node-input-config">
         <i class="fa fa-tag"></i>
