--- a/nodes/uglifyjs.html
+++ b/nodes/uglifyjs.html
@@ -76,6 +76,16 @@
 
 <script type="text/html" data-help-name="UglifyJS">
   <p>Uglify Javascript code.</p>
-  Uglify Javascript code. Based on the <a href="https://www.npmjs.com/package/uglify-js">uglify-js<a> package.
-  <p>Possible configuration options are described <a href="https://www.npmjs.com/package/uglify-js#minify-options">here</a>.
+  
+  <p>Uglify Javascript code. Based on the <a href="https://www.npmjs.com/package/uglify-js">uglify-js</a> package.</p>
+
+  <p>
+    Possible configuration options are described <a href="https://www.npmjs.com/package/uglify-js#minify-options">here</a>.
+  </p>
+  <p>
+    <code>msg.payload</code> is passed as the first argument to the <a href="https://www.npmjs.com/package/uglify-js#api-reference">minify</a> method, so it can be a string or object.
+  </p>
+  <p>
+    Usage example is provided: <img src="https://cdn.openmindmap.org/content/1697273742712_Screen_Shot_2023-10-14_at_10.55.06.png"/>
+  </p>
 </script>
