--- a/nodes/uglifyjs.html
+++ b/nodes/uglifyjs.html
@@ -89,7 +89,7 @@
 
   <div class="form-row">
     Apply to which property? This property will used as input <br> 
-    and it will be replaced on the message my the uglified version <br>
+    and it will be replaced on the message the uglified version <br>
     of the original content.
   </div>
   
